exports[`client > reducers > organization analyses children handler reducer tests it should handle add analysis 1`] = `
Object {
  "organization-1": Object {
    "agencyId": "agency-3",
    "analyses": Array [
      "analysis-new",
    ],
    "contact": "someone",
    "email": "abc@def.ghi",
    "groups": Array [],
    "id": "organization-1",
    "logo_url": "https://placekitten.com/80/80",
    "main_url": "https://placekitten.com/",
    "name": "Mock Organization",
    "sites": Array [],
  },
}
`;

exports[`client > reducers > organization analyses children handler reducer tests it should handle delete analysis 1`] = `
Object {
  "organization-2": Object {
    "agencyId": "agency-2",
    "analyses": Array [],
    "contact": "someone",
    "email": "abc@def.ghi",
    "groups": Array [
      "group-2",
    ],
    "id": "organization-2",
    "logo_url": "https://placekitten.com/80/80",
    "main_url": "https://placekitten.com/",
    "name": "Mock Organization",
    "sites": Array [
      "site-2",
    ],
  },
}
`;

exports[`client > reducers > organization generic reducer tests should handle add organization 1`] = `
Object {
  "organization-1": Object {
    "agencyId": "agency-3",
    "analyses": Array [],
    "contact": "someone",
    "email": "abc@def.ghi",
    "groups": Array [],
    "id": "organization-1",
    "logo_url": "https://placekitten.com/80/80",
    "main_url": "https://placekitten.com/",
    "name": "Mock Organization",
    "sites": Array [],
  },
}
`;

exports[`client > reducers > organization generic reducer tests should handle delete organization 1`] = `Object {}`;

exports[`client > reducers > organization generic reducer tests should handle set organization 1`] = `
Object {
  "organization-1": Object {
    "agencyId": "agency-3",
    "analyses": Array [],
    "contact": "someone",
    "email": "abc@def.ghi",
    "groups": Array [],
    "id": "organization-1",
    "logo_url": "https://placekitten.com/80/80",
    "main_url": "https://placekitten.com/",
    "name": "Mock Organization",
    "sites": Array [],
  },
  "organization-2": Object {
    "agencyId": "agency-2",
    "analyses": Array [
      "analysis-2",
    ],
    "contact": "someone",
    "email": "abc@def.ghi",
    "groups": Array [
      "group-2",
    ],
    "id": "organization-2",
    "logo_url": "https://placekitten.com/80/80",
    "main_url": "https://placekitten.com/",
    "name": "Mock Organization",
    "sites": Array [
      "site-2",
    ],
  },
}
`;

exports[`client > reducers > organization generic reducer tests should handle set organizations 1`] = `
Object {
  "organization-1": Object {
    "agencyId": "agency-3",
    "analyses": Array [],
    "contact": "someone",
    "email": "abc@def.ghi",
    "groups": Array [],
    "id": "organization-1",
    "logo_url": "https://placekitten.com/80/80",
    "main_url": "https://placekitten.com/",
    "name": "Mock Organization",
    "sites": Array [],
  },
  "organization-2": Object {
    "agencyId": "agency-2",
    "analyses": Array [
      "analysis-2",
    ],
    "contact": "someone",
    "email": "abc@def.ghi",
    "groups": Array [
      "group-2",
    ],
    "id": "organization-2",
    "logo_url": "https://placekitten.com/80/80",
    "main_url": "https://placekitten.com/",
    "name": "Mock Organization",
    "sites": Array [
      "site-2",
    ],
  },
}
`;

exports[`client > reducers > organization groups children handler reducer tests it should handle add group 1`] = `
Object {
  "organization-1": Object {
    "agencyId": "agency-3",
    "analyses": Array [],
    "contact": "someone",
    "email": "abc@def.ghi",
    "groups": Array [
      "group-new",
    ],
    "id": "organization-1",
    "logo_url": "https://placekitten.com/80/80",
    "main_url": "https://placekitten.com/",
    "name": "Mock Organization",
    "sites": Array [],
  },
}
`;

exports[`client > reducers > organization groups children handler reducer tests it should handle delete group 1`] = `
Object {
  "organization-2": Object {
    "agencyId": "agency-2",
    "analyses": Array [
      "analysis-2",
    ],
    "contact": "someone",
    "email": "abc@def.ghi",
    "groups": Array [],
    "id": "organization-2",
    "logo_url": "https://placekitten.com/80/80",
    "main_url": "https://placekitten.com/",
    "name": "Mock Organization",
    "sites": Array [
      "site-2",
    ],
  },
}
`;

exports[`client > reducers > organization sites children handler reducer tests it should handle add site 1`] = `
Object {
  "organization-1": Object {
    "agencyId": "agency-3",
    "analyses": Array [],
    "contact": "someone",
    "email": "abc@def.ghi",
    "groups": Array [],
    "id": "organization-1",
    "logo_url": "https://placekitten.com/80/80",
    "main_url": "https://placekitten.com/",
    "name": "Mock Organization",
    "sites": Array [
      "site-new",
    ],
  },
}
`;

exports[`client > reducers > organization sites children handler reducer tests it should handle delete site 1`] = `
Object {
  "organization-2": Object {
    "agencyId": "agency-2",
    "analyses": Array [
      "analysis-2",
    ],
    "contact": "someone",
    "email": "abc@def.ghi",
    "groups": Array [
      "group-2",
    ],
    "id": "organization-2",
    "logo_url": "https://placekitten.com/80/80",
    "main_url": "https://placekitten.com/",
    "name": "Mock Organization",
    "sites": Array [],
  },
}
`;
